--- a/plot_curves.ipynb
+++ b/plot_curves.ipynb
@@ -5,7 +5,7 @@
    "id": "433492dd-6736-4e98-8df2-cf673bd42165",
    "metadata": {},
    "source": [
-    "# Data Efficient Neural Scaling Laws"
+    "# Data Efficient Neural Scaling Laws via Model Reusing"
    ]
   },
   {
